# thread-control

./: CMakeLists.txt  README.md  threadcontroller.cpp  threadcontroller.h
.github/workflows/: cmake.yml
examples/: main.cpp
headers/: threadcontroller.h  threadcontroller.hpp
sources/: threadcontroller.cpp
